# lingque

./: .env.example  PLAGIARISM_STATEMENT.md  README.md  README_CN.md  myReadme.md  pyproject.toml
docs/: rl-memory-references-guide-book.md
src/lq/: cli.py  config.py  conversation.py  gateway.py  memory.py  session.py  templates.py  voice.py
src/lq/discord_/: adapter.py  sender.py
src/lq/executor/: api.py
src/lq/platform/: __init__.py
src/lq/prompts/: reflection.py  tools.py
src/lq/router/: core.py  defs.py  private.py  runtime_tools.py  tool_exec.py  tool_loop.py  vision_mcp.py
src/lq/wecom/: adapter.py
