[project]
name = "lingque"
version = "1.3.0"
description = "灵雀 — 平台无关的个人 AI 助理框架，支持可插拔聊天平台适配器"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "lark-oapi>=1.4",
    "anthropic>=0.40",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "httpx[socks]>=0.27",
    "pypinyin>=0.55.0",
    "json-repair>=0.58.0",
    "claude-agent-sdk>=0.1",
    "telegramify-markdown>=0.1",
    "cryptography>=42.0",
    "pymupdf>=1.27.2.2",
]

[project.optional-dependencies]
discord = ["discord.py>=2.3"]
wechat-voice = ["pilk>=0.2"]
browser = ["playwright>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
lq = "lq.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
